# locust-sse

./: .gitignore  CHANGELOG.md  Makefile  pyproject.toml
.github/workflows/: release.yml
locust_sse/: user.py
tests/: test_e2e.py  test_sse_user.py
tools/sse-server/: go.mod  go.sum  main.go
tools/sse-server/pkg/server/: server.go
tools/sse-server/pkg/ui/: ui.go
